[package]
name = "forms_system"
version = "0.1.0-SNAPSHOT"
edition = "2021"
publish = false

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
bcrypt = "0.10"
serde = { version = "1.0", features = ["derive"] }
uuid = "0.8"
syn = { version = "1.0", features = ["parsing", "derive"] }